fix: center content with scrollbar-gutter both-edges

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@
 }
 
 @layer base {
+	html {
+		overflow-y: scroll;
+		scrollbar-gutter: stable both-edges;
+	}
 	body {
 		@apply bg-background-light text-text-light;
 	}
